@@ -28,6 +28,8 @@ Enoch/artwork/themes/default/device_generic.png -text
 Enoch/artwork/themes/default/device_generic_o.png -text
 Enoch/artwork/themes/default/device_hfsfusion_mav.png -text
 Enoch/artwork/themes/default/device_hfsfusion_mav_o.png -text
+Enoch/artwork/themes/default/device_hfsfusion_yos.png -text
+Enoch/artwork/themes/default/device_hfsfusion_yos_o.png -text
 Enoch/artwork/themes/default/device_hfsplus.png -text
 Enoch/artwork/themes/default/device_hfsplus_leo.png -text
 Enoch/artwork/themes/default/device_hfsplus_leo_o.png -text
